# aesprite-bevy

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: RH-Frontanim.dyn  RH-Frontanim.json
examples/: dynastes.rs  ex1.rs  manual-animation.rs
src/: aseprite.rs  lib.rs
