[package]
name = "aseprite-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
dynastes = { git = "ssh://git@github.com/juniperparsnips/dynastes.git", branch = "aseprite" }
ron = "0.8.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0.133"
thiserror = "2.0.11"

[[example]]
name = "manual-animation"

[[example]]
name = "dynastes"
features = ["dynastes"]
